kubernetes/apps/zigbee/zigbee2mqtt/emqx/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "simple-icons:mqtt"
  labels:
    app.kubernetes.io/name: &app emqx
    app.kubernetes.io/instance: *app
    app.kubernetes.io/part-of: *app
  name: *app
  namespace: zigbee
spec:
  hostnames:
    - emqx.${INTERNAL_DOMAIN}
  parentRefs:
    - kind: Gateway
      name: main-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: emqx-dashboard
          port: 18083
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
